animation added Note: Please fix the card issue on search screen the div is stretched

--- a/frontend/src/style/HomeScreen.css
+++ b/frontend/src/style/HomeScreen.css
@@ -23,7 +23,7 @@
 }
 
 .product_img {
-  width: 50vw;
+  width: 30vw;
   border-radius: 30px;
   padding: 10px 0;
 }
@@ -40,7 +40,7 @@
 }
 
 .product_title {
-  font-size: 2rem;
+  font-size: 1.3rem;
   text-decoration: none;
   color: #2a2f38;
   font-family: "Courier New", Courier, monospace;
@@ -49,14 +49,14 @@
 .rating {
   color: #ffa600;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 .price {
   color: #0652f5;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bolder;
 }
 
@@ -64,7 +64,7 @@
   color: #00194e;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   text-decoration: none;
 }
 
